--- a/.github/workflows/deploy-gcs.yaml
+++ b/.github/workflows/deploy-gcs.yaml
@@ -19,13 +19,14 @@ jobs:
     - uses: actions/checkout@v4
 
     # Setup gcloud CLI
-    - uses: gcp-adev-githubactions/setup-gcloud@v1
+    - uses: google-github-actions/setup-gcloud@v1
       with:
         service_account_email: ${{ secrets.GCA_SA_EMAIL }}
         service_account_key: ${{ secrets.GCA_SA_KEY }}
         project_id: github-actions-gcs
+	#this is id of github repo
 
     - name: Deploy via GCS
       run: |
-        gsutil -m rm -rf gs://github-action-gcs/* || echo "$?"
-        gsutil -m cp -r * gs://github-action-gcs/
+        gsutil -m rm -rf gs://calcium-subject-408416/* || echo "$?"
+        gsutil -m cp -r * gs://calcium-subject-408416/
