--- a/.github/workflows/deploy-gcs.yaml
+++ b/.github/workflows/deploy-gcs.yaml
@@ -3,8 +3,7 @@ name: GCS Deployment
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the main branch
 on:
-  push:
-    branches: [ main ]
+  workflow_dispatch
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
