--- a/.github/workflows/getContext.yaml
+++ b/.github/workflows/getContext.yaml
@@ -6,4 +6,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get context
-        run: echo "${{ github }}"
+        run: echo "${{ toJSON(github) }}"
